# omubot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  bot.py  config.example.toml  docker-compose.bot2.yml  docker-compose.yml  feature-classification.md  maintenance-log.md  pyproject.toml
.codex/: hooks.json
.githooks/: pre-commit
admin/: __init__.py  auth.py  templates.py
ccip-sidecar/: Dockerfile  server.py
docs/: admin-a11y-checklist.md  admin-runtime-interaction.md  admin-ui-style-guide.md  admin-ui-tokens.md  agent-discipline.md  agent-ui-guidelines.md  ai-persona-generation-rules.md  architecture.md  conversation-archive-implementation-tracker.md  group-concurrency-architecture-plan.md  group-concurrency-implementation-tracker.md  maibot-slang-improvement-proposal.md  operations.md  pending-and-observation.md  persona-spec-format.md  project-info.md  reply-workflow-implementation-tracker.md  session-handoff.md  setup-guide.md  slang-db-corruption-fullfix-tracker.md  slang-governance-research-2026-05-16.md  slang-module-implementation-tracker.md  slang-module-test-set-2026-05-10.md  style-learning-implementation-tracker.md  web-refactor-plan.md
kernel/: __init__.py  bot_pair_guard.py  bus.py  config.py  manifest.py  qq_face.py  router.py  types.py
plugins/: bilibili.py  bilibili.toml  chat.json  chat.py  datetime.py  debug_commands.json  debug_commands.py  dream.json  dream.py  dream.toml  echo.json  echo.py  element_detector.json  element_detector.py  element_detector.toml  food.py  food.toml  (+15 more)
(+1223 files in other folders)
