[project]
name = "qq-bot"
version = "1.2.1"
description = "QQ LLM Bot - NoneBot2 + Anthropic"
requires-python = ">=3.12"
dependencies = [
    "nonebot2[fastapi]>=2.4.0",
    "nonebot-adapter-onebot>=2.4.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "loguru>=0.7.0",
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.4",
    "tenacity>=9.1.4",
    "aiosqlite>=0.21.0",
    "rich>=13.0.0",
    "pyvips>=3.1.1",
    "duckduckgo-search>=8.1.1",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.18",
    "bilibili-api-python>=17.0.0",
]

[tool.nonebot]
adapters = [{ name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }]
plugins = ["plugins.chat"]

[tool.ruff]
target-version = "py312"
line-length = 120
extend-exclude = ["._*", ".__*"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["RUF001", "RUF002", "RUF003"]  # 允许中文全角字符

[tool.ruff.lint.per-file-ignores]
"plugins/schedule/generator.py" = ["E501"]  # 系统提示词含长中文行

[tool.ruff.lint.isort]
known-first-party = ["src", "kernel", "services", "plugins", "admin"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"
typeCheckingMode = "standard"

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.8",
]
